adding book to MySQL functions

--- a/src/main/webapp/resources/form.html
+++ b/src/main/webapp/resources/form.html
@@ -11,13 +11,13 @@
 	<form name="bookForm" action="../addBook" onsubmit="return addUserBook();" method="post">
 		Book Title:<input type="text" name="title" /> <br>
 		Author (Last name, First name):<input type="text" name="author"> <br>
-		Sales:<input type="int" name="sales"> <br>
-		Imprint:<input type="text" name="imprint"> <br> 
+		Sales:<input type="text" name="sales"> <br>
+		<!--Imprint:<input type="text" name="imprint"> <br> -->
 		Publisher:<input type= "text" name="publisher"> <br>
-		Year Published:<input type="int" name="yearPublished"><br>
+		<!--  Year Published:<input type="int" name="yearPublished"><br>
 		Genre:<input type="text" name="genre" ><br>
 		Status:<input type="int" name="status"> <br> 
-		Borrower: <input type="int" name= "borrower"> <br><br />
+		Borrower: <input type="int" name= "borrower"> --><br><br />
 		<input type="submit" value="Submit!">
 	</form>
 
@@ -27,12 +27,12 @@
 			var title = document.forms["bookForm"]["title"].value;
 			var author = document.forms["bookForm"]["author"].value;
 			var sales = document.forms["bookForm"]["sales"].value;
-			var imprint = document.forms["bookForm"]["imprint"].value;
+			//var imprint = document.forms["bookForm"]["imprint"].value;
 			var publisher = document.forms["bookForm"]["publisher"].value;
-			var yearPublished = document.forms["bookForm"]["yearPublished"].value;
+			<!--var yearPublished = document.forms["bookForm"]["yearPublished"].value;
 			var genre = document.forms["bookForm"]["genre"].value;
 			var status = document.forms["bookForm"]["status"].value;
-			var borrower = document.forms["bookForm"]["borrower"].value;
+			var borrower = document.forms["bookForm"]["borrower"].value;-->
 			
 			<!-- if (firstname == null || firstname == "") {
 				alert("Name field cannot be blank");
