Add function to delete books from Library

--- a/src/main/webapp/resources/form.html
+++ b/src/main/webapp/resources/form.html
@@ -9,11 +9,15 @@
 	<h1>Add A Book!</h1>
 	
 	<form name="bookForm" action="../addBook" onsubmit="return addUserBook();" method="post">
-		Book Title:<input type="text" name="title" /> <br>
-		Author (Last name, First name):<input type="text" name="author"> <br>
-		Sales:<input type="text" name="sales"> <br>
+		Book Title:<br>
+		<input type="text" name="title" /> <br>
+		Author (Last name, First name):<br>
+		<input type="text" name="author"> <br>
+		Sales:<br>
+		<input type="text" name="sales"> <br>
 		<!--Imprint:<input type="text" name="imprint"> <br> -->
-		Publisher:<input type= "text" name="publisher"> <br>
+		Publisher:<br>
+		<input type= "text" name="publisher"> <br>
 		<!--  Year Published:<input type="int" name="yearPublished"><br>
 		Genre:<input type="text" name="genre" ><br>
 		Status:<input type="int" name="status"> <br> 
